--- a/he/html/webstyle.css
+++ b/he/html/webstyle.css
@@ -82,8 +82,8 @@ b.button {
 	font-weight:normal;
     font-size:12px;	
 }
-/* for reference to properties /library */
-b.propertie {
+/* for reference to .propertys /library */
+b.property {
 	color:#00008B;
 	font-weight:bold;
 }
